SERVER-20678 Create a new JS scope for each mapreduce